--- a/components/Project/Project.module.css
+++ b/components/Project/Project.module.css
@@ -69,7 +69,8 @@
     margin:5px 10px;
     border-radius: 5px;
     color:#fff;
-    padding:6px 10px
+    padding:6px 10px;
+    font-size:12px
 }
 .button1{
     border: 1px solid #333333;
@@ -77,6 +78,7 @@
     color:#333;
      padding:6px 10px;
       border-radius: 5px;
+         font-size:12px
 }
 @media only screen and (max-width: 576px) {
   .container {
